--- a/Recommender_System/6. Ensemble-Based and Hybrid Recommender Systems.md
+++ b/Recommender_System/6. Ensemble-Based and Hybrid Recommender Systems.md
@@ -1,7 +1,7 @@
 # 6. Ensemble-Based and Hybrid Recommender Systems
 
 ## Hybrid System
-![하이브리드 시스템의 분류](./img/category%20of%20hybrid%20systems.jpg) 
+<img src="./img/category%20of%20hybrid%20systems.jpg" width="200" height="400"/>
 
 - 하이브리드 추천시스템
 	> 다양한 추천 시스템의 알고리즘을 사용해 보다 뛰어난 성능을 가진 알고리즘을 만들어낼 수 있음
