--- a/Recommender_System/6. Ensemble-Based and Hybrid Recommender Systems.md
+++ b/Recommender_System/6. Ensemble-Based and Hybrid Recommender Systems.md
@@ -4,15 +4,15 @@
 <img src="./img/category%20of%20hybrid%20systems.jpg" width="800" height="500"/>
 
 - 하이브리드 추천시스템
-	> 다양한 추천 시스템의 알고리즘을 사용해 보다 뛰어난 성능을 가진 알고리즘을 만들어낼 수 있음
-	> 일반적으로 사용하는 '앙상블' 보다 더 큰 개념임
+	>- 다양한 추천 시스템의 알고리즘을 사용해 보다 뛰어난 성능을 가진 알고리즘을 만들어낼 수 있음
+	>- 일반적으로 사용하는 '앙상블' 보다 더 큰 개념임
 	- ex) 5장에서 논의한 세가지 종류의 추천방법
-	> 협업 방법(Collaborative Filtering RS) 
-	> 콘텐츠 기반 방법(Content-Based RS)
-	> 지식 기반 방법(Knowledge-Based RS)
-	-> 세가지 방법들은 다른 각자 다른 데이터 소스를 사용하며, 각기 다른 강점과 약점을 지닌다.
-	-> 이 세가지 방식을 사용해 더 좋은 성능을 내는 알고리즘을 만들어낼 수 있음
-	-> 서로 다른 모델들을 결합하는 것 뿐 아니라 서로 같은 모델을 결합할 수도 있음( ex)콘텐츠 및 지식기반)
+	>- 협업 방법(Collaborative Filtering RS) 
+	>- 콘텐츠 기반 방법(Content-Based RS)
+	>- 지식 기반 방법(Knowledge-Based RS)
+	>- -> 세가지 방법들은 다른 각자 다른 데이터 소스를 사용하며, 각기 다른 강점과 약점을 지닌다.
+	>- -> 이 세가지 방식을 사용해 더 좋은 성능을 내는 알고리즘을 만들어낼 수 있음
+	>- -> 서로 다른 모델들을 결합하는 것 뿐 아니라 서로 같은 모델을 결합할 수도 있음( ex)콘텐츠 및 지식기반)
 
 - 하이브리드 추천시스템을 만드는 세가지 기본 방법
 	1. 앙상블 디자인
