Update 6. Ensemble-Based and Hybrid Recommender Systems.md

--- a/Recommender_System/6. Ensemble-Based and Hybrid Recommender Systems.md
+++ b/Recommender_System/6. Ensemble-Based and Hybrid Recommender Systems.md
@@ -29,6 +29,7 @@
 	>- 모든 개별 구성 요소가 __기존의 단일 알고리즘과 같은 것은 아님__
 	3. 혼합 시스템
 	>- 여러 알고리즘들을 기존의 단일 알고리즘으로 사용
-	>- 다양한 시스템에 의한 추천 아이템이 나란히 표시되기 때문에 단일 아이템의 추천을 개별적으로 보는 것보단 __추천을 생성하는 아이템의 조합에__ 더 focus가 맞추어져 있음
+	>- 다양한 시스템에 의한 추천 아이템이 나란히 표시됨
+	>- 때문에 단일 아이템의 추천을 개별적으로 보는 것보단 __추천을 생성하는 아이템의 조합에__ 더 focus가 맞추어져 있음
 
 ## Burke, 하이브리드 추천시스템의 범주
