Update 6. Ensemble-Based and Hybrid Recommender Systems.md

--- a/Recommender_System/6. Ensemble-Based and Hybrid Recommender Systems.md
+++ b/Recommender_System/6. Ensemble-Based and Hybrid Recommender Systems.md
@@ -32,43 +32,43 @@
 	>- 여러 알고리즘들을 기존의 단일 알고리즘으로 사용
 	>- 다양한 시스템에 의한 추천 아이템이 나란히 표시됨
 	>- 때문에 단일 아이템의 추천을 개별적으로 보는 것보단 __추천을 생성하는 아이템의 조합에__ 더 focus가 맞추어져 있음
-
-## Burke, 하이브리드 추천시스템의 범주
-
-### Hybrid System - Ensemble - Parallel
+# Hybrid System 분류
+## Hybrid System - Ensemble - Parallel
 <img src="./img/parallel design.jpg" width="500" height="250"/>
 
-	1. 가중(weighted)
+### 1. 가중(weighted)
 	- 개별 추천 시스템의 결과를 가중 집계하여 최종 결과를 도출
 	- 직관적(huristic)인 방식을 사용하거나 공식 통계 모델을 사용
 
-	2. 스위칭(switching)
+### 2. 스위칭(switching)
 	- 현재 요구(분석 상황에 맞게 고려)에 따라 사용 모델을 변경
 
-### Hybrid System - Ensemble - Sequential
+## Hybrid System - Ensemble - Sequential
 <img src="./img/sequential design.jpg" width="500" height="200"/>
 
-	3. 캐스케이드(cascade)
+### 3. 캐스케이드(cascade)
 	- 한 추천 시스템은 다른 추천시스템에 의해 제시된 추천을 수정
 	- ex) Boosting - 연쇄적인 모델 학습을 통해 최종적으로 단일 결과 출력
 
-	4. 피처 보강(Feature augmentation)
+### 4. 피처 보강(Feature augmentation)
 	- 한 추천 시스템의 출력을 다음 추천 시스템의 입력으로 받는 방식
 	- 분류에서 사용되는 Stacking의 개념과 유사
 	- 일부는 기존 추천모델에 대한 약간의 변경이 필요하기 때문에 모놀리틱 방식으로 간주될 수 있음 (점선)
 
-### Hybrid System - Monolithic
+## Hybrid System - Monolithic
 
-	5. 피처 결합(Feature combination)
+### 5. 피처 결합(Feature combination)
 	- 여러 데이터 소스의 특징이 단일 추천 시스템 맥락에 결합돼 사용됨
 
-	6. 메타레벨(Meta-level)
+### 6. 메타레벨(Meta-level)
 	 - 한 추천 시스템이 사용하는 모델이 다른 시스템의 입력으로 사용됨
 	 - ex) 콘텐츠기반 협업시스템 
 	 - -> 기존의 방식으로 두 알고리즘을 사용하는 것이 아니라 협업시스템을 수정하여 콘텐츠기반 알고리즘을 사용함
 
-### Hybrid System - Mixed
+## Hybrid System - Mixed
 
-	7. 혼합(Mixed)
+### 7. 혼합(Mixed)
 	- 여러 엔진의 추천 사항이 동시에 사용자에게 제공됨
 	- ex) 복합 TV 프로그램
+
+
