--- a/Recommender_System/6. Ensemble-Based and Hybrid Recommender Systems.md
+++ b/Recommender_System/6. Ensemble-Based and Hybrid Recommender Systems.md
@@ -38,7 +38,30 @@
 
 ### 1. 가중(weighted)
 	- 개별 추천 시스템의 결과를 가중 집계하여 최종 결과를 도출
+	- 좀 더 정확한 시스템에 중요성을 부과하기 위해 더 큰 가중치를 사용하는 것이 이상적
 	- 직관적(huristic)인 방식을 사용하거나 공식 통계 모델을 사용
+>가중치를 어떻게 매겨야 할까?
+>- 간단한 접근 방법은 평점 행렬을 __train과 valid로 나눈 후__ 예측 행렬을 MSE, MAE를 사용해 __평가__
+>- 독립적인 변수를 선택해 선형 조합의 MSE가 최소가 되도록 하는 함
+>- 선형 회귀를 사용해 가중치를 학습한 후 전체 훈련 세트에서 __재교육__, __재학습__ 됨
+>- 일반적인 방법은 __경사하강법(Gradient Descent)을__ 사용하는 것
+>- 과적합 방지를 위해 규제, 정규화, 제약 추가 가능
+
+	- 평가지표? 
+	> MSE는 이상치에 민감. MAE를 사용함으로 보완 가능
+
+> 1.1 다양한 유형의 모델 조합
+>- 1. 동종 데이터 유형 및 모델 클래스
+		- __다른__ 모델이 __동일한 데이터에__ 적용됨
+		- KNN, SVD, 베이즈 기술 등의 모델을 사용 후 가중합 
+>- 2. 이기종 데이터 유형 및 모델 클래스
+		- __다른__ 모델이 __다른 데이터에__ 적용됨
+		- 여러 데이터 소스의 힘을 결합 프로세스에 통합
+		- 가중치를 신중하게 부여하는 것이 중요
+		- 협업 기반 + 콘텐츠기반
+ 
+> 1.2 분류에서의 배깅 적응
+>- 1.2.1 행단위 부트 스트래핑
 
 ### 2. 스위칭(switching)
 	- 현재 요구(분석 상황에 맞게 고려)에 따라 사용 모델을 변경
