Update 6. Ensemble-Based and Hybrid Recommender Systems.md

--- a/Recommender_System/6. Ensemble-Based and Hybrid Recommender Systems.md
+++ b/Recommender_System/6. Ensemble-Based and Hybrid Recommender Systems.md
@@ -61,16 +61,29 @@
 		- 협업 기반 + 콘텐츠기반
  
 > 1.2 분류에서의 배깅 적응
->- 1.2.1 행단위 부트 스트래핑
+>- 행단위 부트 스트래핑
+>- 행단위 서브 샘플링
+>- 엔트리 단위 배깅
+>- 엔트리 단위 서브 샘플링 
+-> 배깅에서 최대의 성능을 내기 위해 __낮은 바이어스와 높은 분산을__ 갖는 상관되지 않은 기본 모델을 사용하는 것이 좋음
+
 
 ### 2. 스위칭(switching)
 	- 현재 요구(분석 상황에 맞게 고려)에 따라 사용 모델을 변경
+	- cold start문제를 해결하는데에 효과적임
+> 2.1 모델 버킷
+>- 머신러닝의 방법에서와 같이 train valid로 나누어 효과적인 모델을 찾음
+>- 모델 버킷이 동적인 경우, 시스템의 전환(스위칭)이 이루어짐
+>- 모델 버킷이 정적인 경우, 한 요소의 가중치를 1로 두고 나머지 구성요소의 가중치를 0으로 둔 가중 모델로 볼 수 있음
 
 ## Hybrid System - Ensemble - Sequential
 <img src="./img/sequential design.jpg" width="500" height="200"/>
 
 ### 3. 캐스케이드(cascade)
 	- 한 추천 시스템은 다른 추천시스템에 의해 제시된 추천을 수정
+	- 동일한 가중치를 주고 시작하여 잘 학습하지 못한(오류가 있는) 예제의 가중치는 증가, 잘 학습된 예제의 가중치는 감소
+	- 모든 가중치의 합은 항상 1로 정규화됨
+	- 협업 필터링의 경우 가중치는 개별 평점과 연관됨
 	- ex) Boosting - 연쇄적인 모델 학습을 통해 최종적으로 단일 결과 출력
 
 ### 4. 피처 보강(Feature augmentation)
