--- a/Recommender_System/6. Ensemble-Based and Hybrid Recommender Systems.md
+++ b/Recommender_System/6. Ensemble-Based and Hybrid Recommender Systems.md
@@ -86,6 +86,7 @@
 	- 협업 필터링의 경우 가중치는 개별 평점과 연관됨
 	- ex) Boosting - 연쇄적인 모델 학습을 통해 최종적으로 단일 결과 출력
 
+
 ### 4. 피처 보강(Feature augmentation)
 	- 한 추천 시스템의 출력을 다음 추천 시스템의 입력으로 받는 방식
 	- 분류에서 사용되는 Stacking의 개념과 유사
@@ -99,12 +100,13 @@
 ### 6. 메타레벨(Meta-level)
 	 - 한 추천 시스템이 사용하는 모델이 다른 시스템의 입력으로 사용됨
 	 - ex) 콘텐츠기반 협업시스템 
+	 - 첫번째 단계에서 콘텐츠 기반 알고리즘으로 각 사용자에 대해 차별적인 벡터공간 표현을 생성. 관련없는 단어 제거
+	 - 따라서 새로운 표현으로 사용자 간의 유사도를 강력하게 계산 가능
 	 - -> 기존의 방식으로 두 알고리즘을 사용하는 것이 아니라 협업시스템을 수정하여 콘텐츠기반 알고리즘을 사용함
 
 ## Hybrid System - Mixed
 
 ### 7. 혼합(Mixed)
 	- 여러 엔진의 추천 사항이 동시에 사용자에게 제공됨
+	- 주로 지식 기반 추천 시스템과 함께 사용됨
 	- ex) 복합 TV 프로그램
-
-
