Update 6. Ensemble-Based and Hybrid Recommender Systems.md

--- a/Recommender_System/6. Ensemble-Based and Hybrid Recommender Systems.md
+++ b/Recommender_System/6. Ensemble-Based and Hybrid Recommender Systems.md
@@ -53,7 +53,7 @@
 > 1.1 다양한 유형의 모델 조합
 >- 1. 동종 데이터 유형 및 모델 클래스
 		- __다른__ 모델이 __동일한 데이터에__ 적용됨
-		- KNN, SVD, 베이즈 기술 등의 모델을 사용 후 가중합 
+		- 이웃기반방법, SVD, 베이즈 기술 등의 모델을 사용 후 가중합 
 >- 2. 이기종 데이터 유형 및 모델 클래스
 		- __다른__ 모델이 __다른 데이터에__ 적용됨
 		- 여러 데이터 소스의 힘을 결합 프로세스에 통합
