--- a/paper/참고논문.md
+++ b/paper/참고논문.md
@@ -11,3 +11,6 @@ NCF
 
 A Transformer-based recommendation system  
 https://medium.com/nvidia-merlin/transformers4rec-4523cc7d8fa8  
+
+Recommender Systems with Heterogeneous Side Information
+https://arxiv.org/pdf/1907.08679.pdf 
